--- a/contactme.html
+++ b/contactme.html
@@ -11,7 +11,7 @@
     <hr>
 <form action="mailto:sharanyaganji@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
-    <input type="text" name="yourName">><br>
+    <input type="text" name="yourName"><br>
     <label>Password:</label>
     <input type="password" name="password"><br>
     <label>Email id:</label>
